Added Css files

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,11 +7,11 @@
     <title>LynxMana</title>
   </head>
   <body>
-    <p>Hello, I'll be the <strong>best</strong> programmer in the world</p>
+    <p>Heyoo! how's it going?</p>
     <img src="https://media1.tenor.com/images/9589e411ec8525afdf153434777dd8f2/tenor.gif?itemid=13582238" alt="My test image">
 <br>
 </br>
-    <a href="https://www.mozilla.org/en-US/about/manifesto/"> The firefox manifesto</a>
+    <a href="https://steamcommunity.com/id/LynxMana"> LynxMana</a>
     <ul>
   <li>About me</li>
   <li>Hobbies</li>
