Modify home and about page

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="styles/style.css" rel="stylesheet">
+    <link href="stylesheet/style.css" rel="stylesheet">
     <h1>Tell me About you</h1>
     <meta charset="utf-8">
     <title>Tell me about you</title>
