--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="styles/style.css" rel="stylesheet">
+    <link href="stylesheet/style.css" rel="stylesheet">
     <h1>Lynx Of The Mana</h1>
     <meta charset="utf-8">
     <title>LynxMana</title>
