Committing lots of codes

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,9 @@
   </head>
 
   <body>
+    <% flash.do each |name, msg| %>
+        <%= msg %>
+    <% end %>
     <%= yield %>
   </body>
 </html>
