--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,6 +3,8 @@
   <head>
     <link href="stylesheet/style.css" rel="stylesheet">
     <h1>Lynx Of The Mana</h1>
+    <%= link_to 'Article Listing', articles_path %> |
+    <%= link_to 'About page', about_path %>
     <meta charset="utf-8">
     <title>LynxMana</title>
   </head>
