--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -3,6 +3,8 @@
   <head>
     <link href="stylesheet/style.css" rel="stylesheet">
     <h1>Tell me About you</h1>
+    <%= link_to 'Article Listing', articles_path %> |
+    <%= link_to 'Home page', root_path %>
     <meta charset="utf-8">
     <title>Tell me about you</title>
   </head>
