--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,24 +1,5 @@
 <h1>Edit article</h1>
 
-<% if @article.errors.any? %>
+<%= render 'form' %>
 
-<% end %>
-
-<%= form_with(model: @article, local: true)  do |f| %>
-
-<p>
-  <%= f.label :title %><br/>
-  <%= f.text_field : title %>
-</p>
-
-<p>
-  <%= f.label : description %><br/>
-  <%= f.text_area :description %>
-</p>
-
-<p>
-
-</p>
-<%= f.submit %>
-
-<% end %>
+<%= link_to 'Cancel and return to article listing', article_path %>
