--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,26 +1,5 @@
 <h1>Create a new article</h1>
 
-<% if @article.errors.any? %>
-
-<% end %>
-
-<%= form_with scope: :article, url: article_path, local: true do |f| %>
-
-<p>
-  <%= f.label :title %><br/>
-  <%= f.text_field : title %>
-</p>
-
-<p>
-  <%= f.label : description %><br/>
-  <%= f.text_area :description %>
-</p>
-
-<p>
-
-</p>
-<%= f.submit %>
-
-<% end %>
+<%= render 'form' %>
 
 <%= link_to 'Return to article listing', article_path %>
