--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,4 +1,4 @@
-<<h1>Aritcles listing page</h1>
+<h1>Aritcles listing page</h1>
 
 <table>
   <thead>
@@ -13,7 +13,7 @@
     <% @articles.each do |article|%>
     <tr>
       <td><%= article.title %></td>
-      <td><%= article.description %>></td>
+      <td><%= article.description %></td>
       <td><%= link_to 'Show', article_path(article) %></td>
       <td><%= link_to 'Edit', edit_article_path(article) %></td>
       <td><%= link_to 'Delete', article_path(article), method: :delete, data: { Confirm: "Are you sure?"} %></td>
