--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Return to article listing', article_path %>
+<%= link_to 'Return to article listing', articles_path %>
