--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -10,7 +10,7 @@
   </thead>
 
   <tbody>
-    <% @articles.each do |article|%>
+    <% @articles.each do |article| %>
     <tr>
       <td><%= article.title %></td>
       <td><%= article.description %></td>
@@ -18,6 +18,7 @@
       <td><%= link_to 'Edit', edit_article_path(article) %></td>
       <td><%= link_to 'Delete', article_path(article), method: :delete, data: { Confirm: "Are you sure?"} %></td>
     </tr>
+    <% end %>
   </tbody>
 </table>
 
