--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,22 +1,29 @@
-<% if @article.errors.any? %>
-
-<% end %>
-
-<%= form_with(model: @article, local: true)  do |f| %>
-
-<p>
-  <%= f.label :title %><br/>
-  <%= f.text_field :title %>
-</p>
-
-<p>
-  <%= f.label :description %><br/>
-  <%= f.text_area :description %>
-</p>
-
-<p>
-
-</p>
-<%= f.submit %>
-
-<% end %>
+<div class="container">
+      <div class="row justify-content-center">
+        <div class="col-10">
+          <%= render 'shared/errors' %>
+          <%= form_with(model: @article, local: true)  do |f| %>
+          <div class="form-group row">
+            <%= f.label :title, class: "col-2 col-form-label text-light" %>
+            <div class="col-10">
+            <%= f.text_field :title, class: "form-control shadow rounded", placeholder: "Title of Article" %>
+            </div>
+          </div>
+              <br>
+                <div class="form-group row">
+                  <%= f.label :description, class: "col-2 col-form-label text-light" %>
+                    <div class="col-10">
+                      <%= f.text_area :description, rows: 10,  class: "form-control shadow rounded", placeholder: "Description of Article" %>
+                    </div>
+                </div>
+                  <br>
+                  <div class="form-group text-center">
+                    <%= f.submit class: "btn btn-outline-light btn-lg" %>
+                  </div>
+              <% end %>
+          </div>
+          <div class="mb-3">
+              <%= link_to ' [ Cancel and return to article listing ]', articles_path, class: "text-center text-light" %>
+              </div>
+        </div>
+</div>
