--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,7 +5,7 @@
         <p>Welcome to the best website of the decade, no-one has able to produce this high level of coding on any website that exists in this current era.</p>
         <hr class="my-4">
         <p>Here you can create your own article by clicking the button below</p>
-        <a class="btn btn-success btn-lg" <%= link_to 'Article Listing', articles_path %> </a>
+        <%= link_to "Sign up!", signup_path, class: "btn btn-success btn-lg" %>
       </div>
     </div>
     </header>
