--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -10,6 +10,9 @@
         <%= link_to "Aritcles", articles_path, class: "nav-link" %>
       </li>
       <li class="nav-item">
+        <%= link_to "Fans", users_path, class: "nav-link" %>
+      </li>
+      <li class="nav-item">
         <%= link_to "Create new article", new_article_path, class: "nav-link" %>
       </li>
       <li class="nav-item">
