--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -5,6 +5,6 @@
   <%= will_paginate @articles, :container => false %>
 </div>
   <%= render 'article' %>
-  <div class="flickr_pagination mb-4">
+  <div class="flickr_pagination">
     <%= will_paginate @articles, :container => false %>
   </div>
